--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>KAAGAZ.EXE</title>
+  <title>KAAGAZ KHAAB</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
     * {
@@ -81,7 +81,7 @@
   <div class="typing">Booting up the soul...</div>
 
   <a href="midnight-burn.html">📜 Midnight Burn</a>
-  <a href="about.html">👤 About the Creator</a>
+  <a href="https://anurvg.github.io/aboutc.github.io/" target="_blank">👤 Creator Profile</a>
   <a href="https://instagram.com/anurvg.r" target="_blank">📷 Instagram: @anurvg.r</a>
 
   <div class="footer">
