--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>काग़ज़ khaab</title>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+
   <style>
     * {
       margin: 0;
@@ -13,75 +14,103 @@
     }
 
     body {
-      background: linear-gradient(145deg, #1f1c2c, #928dab);
-      font-family: 'Ubuntu Mono', monospace;
-      color: #e3f2fd;
       height: 100vh;
+      background: #0b0c10 url('bps_bg.jpg') no-repeat center center/cover;
+      font-family: 'Ubuntu Mono', monospace;
+      color: #dfe6e9;
+      overflow: hidden;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      overflow: hidden;
       position: relative;
       text-align: center;
     }
 
+    .bulb {
+      position: absolute;
+      top: 10px;
+      left: 12px;
+      font-size: 1.3rem;
+      transform: rotate(-25deg);
+      animation: flicker 1.5s infinite;
+      color: #ffd54f;
+      z-index: 2;
+    }
+
+    @keyframes flicker {
+      0%, 18%, 22%, 25%, 53%, 57%, 100% { opacity: 1; }
+      20%, 24%, 55% { opacity: 0.2; }
+    }
+
     .date-bar {
       position: absolute;
-      top: 12px;
-      right: 20px;
-      font-size: 0.65rem;
-      color: #b0c4de;
-      opacity: 0.8;
+      top: 10px;
+      right: 14px;
+      font-size: 0.55rem;
+      color: #aab0bc;
+      opacity: 0.7;
+    }
+
+    .container {
+      text-align: center;
+      animation: fadeIn 1s ease 1.2s forwards;
     }
 
     h1 {
-      font-size: 2.2rem;
-      margin-bottom: 16px;
-      color: #f4e8ff;
-      animation: flicker 2s infinite alternate;
+      font-size: 2.8rem;
+      color: #f8f1ff;
+      text-shadow: 0 0 8px #7d5fff;
+      animation: riseUp 0.8s ease-out 1s forwards;
+      margin-bottom: 4px;
     }
 
     .subtitle {
-      font-size: 1rem;
-      color: #cdeaff;
-      margin-bottom: 38px;
-      animation: fadeIn 2s ease-in-out;
-      opacity: 0.9;
+      font-size: 1.05rem;
+      color: #a2ded0;
+      white-space: nowrap;
+      overflow: hidden;
+      border-right: 1px solid #a2ded0;
+      animation: typing 2s steps(28, end) 1.8s forwards;
     }
 
     .nav-link {
-      display: none;
-      margin: 10px 0;
-      padding: 10px 22px;
-      font-size: 0.85rem;
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 12px;
-      backdrop-filter: blur(8px);
+      display: block;
+      margin: 10px auto;
+      padding: 8px 20px;
+      font-size: 0.82rem;
+      background: rgba(255, 255, 255, 0.03);
+      border: 1px solid rgba(255, 255, 255, 0.08);
+      border-radius: 10px;
+      backdrop-filter: blur(5px);
       color: #e0f7fa;
       text-decoration: none;
-      transition: all 0.3s ease;
+      opacity: 0;
+      animation: fadeIn 0.7s ease forwards;
     }
 
+    #link1 { animation-delay: 2.8s; }
+    #link2 { animation-delay: 3.1s; }
+
     .nav-link:hover {
-      background: rgba(255, 255, 255, 0.2);
-      transform: translateY(-2px);
+      background: rgba(255, 255, 255, 0.15);
+      transform: translateY(-1px);
     }
 
     .feedback-btn {
       position: absolute;
-      bottom: 60px;
-      left: 14px;
+      bottom: 16px;
+      right: 14px;
       font-size: 0.6rem;
       padding: 5px 10px;
-      border: 1px dashed #a5b9c9;
-      color: #c7d7e4;
+      border: 1px dashed #899db8;
+      color: #c0d8f0;
       background: transparent;
       border-radius: 6px;
       text-decoration: none;
       transition: all 0.3s ease;
       opacity: 0.3;
+      z-index: 3;
     }
 
     .feedback-btn:hover {
@@ -92,56 +121,60 @@
 
     footer {
       position: absolute;
-      bottom: 16px;
+      bottom: 4px;
       font-size: 0.55rem;
-      color: #b0b0b0;
+      color: #888;
       opacity: 0.6;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+      to { opacity: 1; }
     }
 
-    @keyframes flicker {
-      0%   { opacity: 1; }
-      50%  { opacity: 0.8; }
-      100% { opacity: 1; }
+    @keyframes riseUp {
+      from { transform: translateY(0); }
+      to { transform: translateY(-40px); }
+    }
+
+    @keyframes typing {
+      from { width: 0; opacity: 1; }
+      to { width: 220px; opacity: 1; }
     }
   </style>
 </head>
+
 <body>
-  <!-- Top-right: Date, Time, Moon -->
-  <div class="date-bar" id="date-bar">📆 Loading...</div>
+  <!-- Flickering Bulb -->
+  <div class="bulb">💡</div>
 
-  <!-- Title -->
-  <h1>काग़ज़ khaab</h1>
-  <div class="subtitle">🕯️ खुद se baatain...</div>
+  <!-- Date, Time & Moon -->
+  <div class="date-bar" id="date-bar">Loading...</div>
 
-  <!-- Delayed Links -->
+  <!-- Title & Subtitle -->
+  <div class="container">
+    <h1>काग़ज़ khaab</h1>
+    <div class="subtitle">ख़ुद se baatein...</div>
+  </div>
+
+  <!-- Navigation -->
   <a href="https://www.youtube.com/watch?v=BRQQ-Nw-vAE" target="_blank" class="nav-link" id="link1">🎬 You should watch</a>
-  <a href="https://anurvg.github.io/aboutc.github.io/" target="_blank" class="nav-link" id="link2">👤 Creator Profile</a>
-  <a href="https://instagram.com/anurvg.r" target="_blank" class="nav-link" id="link3">📷 Instagram: @anurvg.r</a>
+  <a href="https://anurvg.github.io/aboutc.github.io/" target="_blank" class="nav-link" id="link2">✍️ The Scribe</a>
 
   <!-- Feedback Button -->
   <a href="https://anurvg.github.io/feedback.github.io/" target="_blank" class="feedback-btn">💬 Feedback</a>
 
   <!-- Footer -->
-  <footer>
-    system://kaagaz.github.io/ initialized ©2025 by @anurag
-  </footer>
+  <footer>system://kaagaz.github.io/ initialized ©2025 by @anurag</footer>
 
-  <!-- Script -->
+  <!-- Script for Time + Moon -->
   <script>
-    // Set Date, Time & Moon Phase
     const dateBar = document.getElementById("date-bar");
 
     function getMoonPhase(date) {
-      const lp = 2551443; // lunar period in seconds
+      const lp = 2551443;
       const now = date / 1000;
       const new_moon = new Date(1970, 0, 7, 20, 35, 0).getTime() / 1000;
       const phase = ((now - new_moon) % lp) / lp;
-
       if (phase < 0.03 || phase > 0.97) return "🌑 New Moon";
       else if (phase < 0.22) return "🌒 Waxing Crescent";
       else if (phase < 0.28) return "🌓 First Quarter";
@@ -154,27 +187,14 @@
 
     function updateDateTime() {
       const today = new Date();
-      const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-      const dateString = today.toLocaleDateString('en-US', options);
+      const dateString = today.toLocaleDateString('en-GB');
       const timeString = today.toLocaleTimeString('en-IN', { hour: '2-digit', minute: '2-digit' });
       const moon = getMoonPhase(today.getTime());
-
       dateBar.innerHTML = `📆 ${dateString} | ⏰ ${timeString} IST | ${moon}`;
     }
 
     setInterval(updateDateTime, 1000);
     updateDateTime();
-
-    // Delay links
-    const delays = [1000, 1300, 1600];
-    const ids = ['link1', 'link2', 'link3'];
-    ids.forEach((id, i) => {
-      setTimeout(() => {
-        const el = document.getElementById(id);
-        el.style.display = 'inline-block';
-        el.style.animation = 'fadeIn 0.5s ease-in-out';
-      }, delays[i]);
-    });
   </script>
 </body>
-</html>
+    </html>
